testsuite/tests/parser/should_compile/p006.alan
hello() : proc
    i : int;
{
 i = 0;
 i = 42;
 i = 1284;
 i = 00200;
 i = -1337;
}
