testsuite/tests/parser/should_fail/pfail033.alan
hello() : proc
{
  hello(1,*3);
}
